Run scripts on every page

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,19 @@
 {
-    "name": "Hello Extensions",
-    "description": "Hello Extensions of the !",
-    "version": "1.0",
-    "manifest_version": 3,
-    "action": {
-      "default_popup": "popup/popup.html",
-      "default_icon": "hello_extensions.png"
+  "name": "Hello Extensions",
+  "description": "Hello Extensions of the !",
+  "version": "1.0",
+  "manifest_version": 3,
+  "action": {
+    "default_popup": "popup/popup.html",
+    "default_icon": "hello_extensions.png"
+  },
+  "content_scripts": [
+    {
+      "js": ["scripts/content.js"],
+      "matches": [
+        "https://developer.chrome.com/docs/extensions/*",
+        "https://developer.chrome.com/docs/webstore/*"
+      ]
     }
-  }
+  ]
+}
